--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -495,18 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "restaurant.to_csv('restaurant.csv')"
+    "restaurants.to_csv('restaurant.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -514,16 +514,16 @@
     {
      "data": {
       "text/plain": [
-       "(60222, 9)"
+       "(4513, 8)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews_keep.shape"
+    "restaurants.shape"
    ]
   },
   {
