remove large files

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -21,7 +21,8 @@
     "from nltk.tag import pos_tag\n",
     "import nltk\n",
     "import gensim\n",
-    "from gensim import corpora"
+    "from gensim import corpora\n",
+    "import shelve"
    ]
   },
   {
@@ -441,6 +442,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with shelve.open('../dataset/ohio_all_reviews') as db:\n",
+    "    db['reviews'] = review_contents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {
     "collapsed": false
@@ -839,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -850,7 +863,7 @@
        "'/Users/tianxia/Desktop/project-3-p2-yo-xi-lo'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
