--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -515,6 +515,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.savefig('./NumberOfReviewsPerRestaurant.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -561,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -572,7 +583,7 @@
        "3128.56576"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +688,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "idx=list(compress(list(range(60222)), slice_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "review_list=np.array(review_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train=review_list[~slice_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -685,69 +729,61 @@
     {
      "data": {
       "text/plain": [
-       "60222"
+       "59326"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(slice_id)-896"
+    "len(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-133-cc56e8dbc6e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create dictionary and term_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# dictionary = corpora.Dictionary(review_list)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mterm_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdictionary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdoc2bow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreview_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60222\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mslice_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-133-cc56e8dbc6e4>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create dictionary and term_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# dictionary = corpora.Dictionary(review_list)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mterm_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdictionary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdoc2bow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreview_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60222\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mslice_id\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    599\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    600\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 601\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    602\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    603\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   2475\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2476\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 2477\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   2478\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2479\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create dictionary and term_matrix\n",
     "# dictionary = corpora.Dictionary(review_list)\n",
-    "term_matrix = [dictionary.doc2bow(review_list[i]) for i in range(60222) if slice_id[i]==False]"
+    "term_matrix = [dicttionary.doc2bow(review) for review in train]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Creating the object for LDA model using gensim library\n",
-    "lda = gensim.models.ldamodel.LdaModel\n",
-    "\n",
-    "# Running and Trainign LDA model on the document term matrix.\n",
-    "ldamodel = lda(term_matrix, num_topics=8, id2word = dictionary, passes=10)"
+    "import random\n",
+    "random.seed(259)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lda = gensim.models.ldamodel.LdaModel\n",
+    "\n",
+    "# Running and Trainign LDA model on the document term matrix.\n",
+    "ldamodel = lda(term_matrix, num_topics=3, id2word = dicttionary, passes=20,random_state=259)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -756,12 +792,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, '0.070*\"food\" + 0.056*\"spicy\" + 0.038*\"place\" + 0.034*\"rice\" + 0.030*\"thai\" + 0.025*\"cleveland\" + 0.021*\"restaurant\" + 0.020*\"tofu\" + 0.017*\"service\" + 0.014*\"soup\"'), (1, '0.095*\"pizza\" + 0.051*\"taco\" + 0.015*\"crust\" + 0.012*\"hour\" + 0.012*\"burrito\" + 0.011*\"place\" + 0.010*\"salsa\" + 0.009*\"sauce\" + 0.009*\"corn\" + 0.008*\"angelo\"'), (2, '0.012*\"door\" + 0.011*\"line\" + 0.010*\"music\" + 0.009*\"cleveland\" + 0.008*\"day\" + 0.008*\"market\" + 0.007*\"way\" + 0.007*\"city\" + 0.006*\"man\" + 0.006*\"room\"'), (3, '0.084*\"food\" + 0.042*\"service\" + 0.042*\"place\" + 0.033*\"time\" + 0.020*\"bar\" + 0.017*\"restaurant\" + 0.016*\"night\" + 0.014*\"order\" + 0.014*\"experience\" + 0.014*\"staff\"'), (4, '0.018*\"dinner\" + 0.017*\"cream\" + 0.017*\"dessert\" + 0.016*\"salad\" + 0.013*\"night\" + 0.012*\"bread\" + 0.012*\"chocolate\" + 0.011*\"meal\" + 0.011*\"butter\" + 0.010*\"cheese\"'), (5, '0.040*\"beer\" + 0.040*\"place\" + 0.039*\"burger\" + 0.026*\"food\" + 0.018*\"selection\" + 0.018*\"bar\" + 0.018*\"coffee\" + 0.015*\"menu\" + 0.015*\"breakfast\" + 0.014*\"spot\"'), (6, '0.024*\"food\" + 0.024*\"pork\" + 0.022*\"chicken\" + 0.020*\"sauce\" + 0.018*\"meat\" + 0.017*\"beef\" + 0.017*\"place\" + 0.016*\"time\" + 0.014*\"order\" + 0.014*\"flavor\"'), (7, '0.032*\"sushi\" + 0.029*\"steak\" + 0.026*\"cleveland\" + 0.022*\"roll\" + 0.021*\"szechuan\" + 0.020*\"chef\" + 0.014*\"tuna\" + 0.013*\"restaurant\" + 0.013*\"buffet\" + 0.012*\"symon\"')]\n"
+      "[(0, '0.128*\"food\" + 0.079*\"place\" + 0.054*\"service\" + 0.026*\"restaurant\" + 0.024*\"lunch\" + 0.022*\"time\"'), (1, '0.051*\"coffee\" + 0.041*\"breakfast\" + 0.025*\"bacon\" + 0.024*\"cream\" + 0.019*\"chocolate\" + 0.014*\"ice\"'), (2, '0.022*\"restaurant\" + 0.022*\"cleveland\" + 0.019*\"night\" + 0.016*\"dinner\" + 0.015*\"experience\" + 0.015*\"room\"'), (3, '0.057*\"food\" + 0.040*\"time\" + 0.029*\"service\" + 0.029*\"place\" + 0.028*\"order\" + 0.015*\"wait\"'), (4, '0.040*\"dog\" + 0.011*\"store\" + 0.011*\"way\" + 0.010*\"daughter\" + 0.009*\"tater\" + 0.008*\"son\"'), (5, '0.055*\"place\" + 0.055*\"beer\" + 0.047*\"burger\" + 0.047*\"food\" + 0.046*\"bar\" + 0.028*\"selection\"'), (6, '0.045*\"beef\" + 0.034*\"tacos\" + 0.023*\"taco\" + 0.021*\"corn\" + 0.017*\"burrito\" + 0.014*\"spicy\"'), (7, '0.151*\"pizza\" + 0.030*\"crust\" + 0.017*\"pizzas\" + 0.016*\"tremont\" + 0.016*\"pasta\" + 0.012*\"pie\"'), (8, '0.048*\"thai\" + 0.044*\"brunch\" + 0.035*\"spicy\" + 0.032*\"sushi\" + 0.029*\"rice\" + 0.026*\"roll\"'), (9, '0.024*\"sauce\" + 0.020*\"pork\" + 0.017*\"salad\" + 0.017*\"chicken\" + 0.016*\"meat\" + 0.014*\"meal\"')]\n"
      ]
     }
    ],
    "source": [
-    "print(ldamodel.print_topics(num_topics=8, num_words=10))"
+    "print(ldamodel.print_topics(num_topics=10, num_words=6))"
    ]
   },
   {
