edit final modeling

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -119,6 +119,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The format of text_feature is\n",
+      "   (0, 17785)\t0.060146376659\n",
+      "  (0, 19534)\t0.0664307345244\n",
+      "  (0, 37080)\t0.0971322128585\n",
+      "  (0, 6868)\t0.215221170104\n",
+      "  (0, 41758)\t0.14424586198\n",
+      "  (0, 16242)\t0.115560138128\n",
+      "  (0, 3668)\t0.169463104229\n",
+      "  (0, 33687)\t0.18134186701\n",
+      "  (0, 42347)\t0.244903534338\n",
+      "  (0, 30214)\t0.173935675158\n",
+      "  (0, 19663)\t0.219337002949\n",
+      "  (0, 10430)\t0.210710863093\n",
+      "  (0, 38753)\t0.253060975895\n",
+      "  (0, 11918)\t0.548103837493\n",
+      "  (0, 1483)\t0.283007805783\n",
+      "  (0, 2376)\t0.371248887227\n",
+      "  (0, 43674)\t0.274472118608\n",
+      "The format of star is\n",
+      " [2 4 5 ..., 4 5 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The format of text_feature is\\n\", text_features[-1:])\n",
+    "print(\"The format of star is\\n\", star)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
