finialize data cleaning nb

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -22,7 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The original data is too large to be uploaded onto GitHub. Thus, the pre-processing and extracting of data were conducted locally with the following code. The original data can be retrived from [Yelp Dataset](https://www.yelp.com/dataset/challenge). We extract a subset from it and save the data we worked with in the \"data\" folder in this repository."
+    "The original data is too large to be uploaded onto GitHub. Thus, the pre-processing and extracting of data were conducted locally with the following code. The original data can be retrived from [Yelp Dataset](https://www.yelp.com/dataset/challenge). We extract a subset from it and save the data we worked with in the \"data\" folder in this repository. If you’d like to replicate the data cleaning and extraction process for this project, please download the raw JSON data, this notebook and run the process locally from your computer. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract Restaurants Data"
    ]
   },
   {
@@ -58,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see below, the data contains business information from different states and different business types. Among the most popular locations and business types, we focus on restaurants at Ohio."
+    "As we can see below, the Yelp Dataset Challenge contains business information from different states and different business types. Among the most popular locations and business types, we focus on restaurants at Ohio.\n"
    ]
   },
   {
@@ -166,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the convenience of research and reproducibility, we will save the data that extracted from the original JSON data into data frames and use them for future analyis and statistical modeling.\n"
+    "For the convenience of research and reproducibility, we will save the data that extracted from the original JSON data into data frames, put them in ‘data’ folder and use them for future analysis and statistical modeling. Note that we convert the restaurant data into csv file called ‘restaurant.csv’. We will subset it and use part of all restaurant information in the following steps."
    ]
   },
   {
@@ -177,7 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "# we need to keep those columns\n",
+    "# we need to keep those columns and convert to csv\n",
     "res_col=['state','city','address','name','business_id','stars','review_count','categories']\n",
     "restaurants=json_normalize(OH_Restaurants)[res_col]"
    ]
@@ -339,7 +346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a lot of business reviews, when we extract them from JSON file, we only extract those reviews which are for the restaurants in our sample."
+    "## Extract Reviews for Restaurants"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After extracting the restaurants information, we move to extract the reviews for those restaurants. There are a lot of reviews, when we extract them from JSON file, we only extract those reviews which are for the restaurants we keep in our sample."
    ]
   },
   {
@@ -367,9 +381,33 @@
    },
    "outputs": [],
    "source": [
-    "# save all the reviews in Ohio\n",
+    "# save all the reviews for restaurants in Ohio. It's around 600Mb, so\n",
+    "# just store them locally\n",
     "with shelve.open('../dataset/ohio_all_reviews') as db:\n",
     "    db['reviews'] = review_contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154764"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# total 154764 reviews on 4513 restaurants\n",
+    "len(review_contents)"
    ]
   },
   {
@@ -380,8 +418,6 @@
    },
    "outputs": [],
    "source": [
-    "# total 154764 reviews on 4513 restaurants\n",
-    "len(review_contents)\n",
     "# convert into data frame\n",
     "reviews=json_normalize(review_contents)"
    ]
@@ -390,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'd like to remove restaurant with too few reviews. We see that there are some restaurants which have few reviews, so we only keep restaurants which have more than 100 reviews."
+    "We'd like to remove restaurant with too few reviews. We see that there are some restaurants which have few reviews, so we only keep restaurants which have more than 100 reviews. Below, we can find the summary statistics for number of reviews for restaurants."
    ]
   },
   {
@@ -464,6 +500,8 @@
     }
    ],
    "source": [
+    "# we can find the summary statistics for number of reviews for restaurants\n",
+    "# after we exclude some restaurants with few reviews.\n",
     "reviews_keep.business_id.value_counts().describe()"
    ]
   },
@@ -471,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see in the follow plot, the range of reviews per restaurant is [100,900] after we filter the data set. "
+    "We only keep 316 restaurants after we exclude some restaurants with few reviews. As we can see in the follow plot, the range of reviews per restaurant is [100,900] after we filter the data set. "
    ]
   },
   {
@@ -512,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see in th following table, the distribution of mean star rating for restaurants is skewed to the left with most restaurants having the mean star ratings in the range between 3 and 4. There are few restaurants which have earned mean ratings less than 2. "
+    "As we can see in th following plot, the distribution of mean star rating for restaurants is skewed to the left with most restaurants having the mean star ratings in the range between 3 and 4. There are few restaurants which have earned mean ratings less than 2. "
    ]
   },
   {
@@ -551,7 +589,7 @@
    },
    "outputs": [],
    "source": [
-    "# save to csv\n",
+    "# we save the restaurants data and reviews data into csv for future analysis\n",
     "reviews_keep.to_csv('reviews.csv')\n",
     "restaurants.to_csv('restaurant.csv')"
    ]
