--- a/main.ipynb
+++ b/main.ipynb
@@ -4,9 +4,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Modeling on Ohio's Restaurant Yelp Review Data: Comparison Between Latent Dirichelet Allocation and Multinomial Logistic Regression\n",
+    "\n",
+    "**Author:** Ningning Long, Yue You, Tian Xia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When running business like restaurants or cafes, owners of business care a lot of how they can make uses of customers’ \n",
+    "reviews after they visit their businesses. The insights mined from customers’ reviews will help discover the weaknesses of the business and contribute to the improvements of service, product or ambience. This study is aimed for utilizing machine learning and natural language processing (NLP) techniques to analyze customers’ reviews from the [Yelp Dataset Challenge](https://www.yelp.com/dataset/challenge)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We focus on a subset data of the whole dataset challenge (i.e. the restaurants reviews in the state of Ohio). We are interested in using the latent dirichelet allocation (LDA) method to find out the topics underlying the customer’s reviews. The latent dirichelet allocation (LDA) is an unsupervised machine learning algorithm that can generate topics based on word frequency from a set of documents. We will use the topics to investigate how they match the reviews and predict the customers’ ratings. Meanwhile, in order to make a comparison, we will also compute the Tf-idf of reviews and use them to run the multinomial logistic regression of customers’ ratings. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The source of the data:\n",
     "\n",
     "copy from homework3...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Extraction & Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Latent Dirichelet Allocation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Author Contributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This repository and project is the collaboration from **Ningning Long**, **Yue You** and **Tian Xia**. Their contributions to the project are summarized as:\n",
+    "\n",
+    "**Ningning Long**:\n",
+    "-\t‘*.ipynb’, latent dirichelet allocation modeling and analysis\n",
+    "-\t‘makefile’\n",
+    "-\t‘environment.yml’\n",
+    "-\tSome write-up of ‘main.ipynb’\n",
+    "\n",
+    "**Yue You**:\n",
+    "-\t‘Modeling.ipynb’, statistical modeling of multinomial logistic regression\n",
+    "-\t‘.gitignore’\n",
+    "-\tSome write-up of ‘main.ipynb’\n",
+    "\n",
+    "**Tian Xia**:\n",
+    "-\t‘Data_Cleaning.ipynb’, data extraction and cleaning\n",
+    "-\t‘README.md’\n",
+    "-\tSome write-up of ‘main.ipynb’\n",
+    "-\t‘LICENSE.md’\n"
    ]
   }
  ],
@@ -26,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
