add more stuff on main

--- a/main.ipynb
+++ b/main.ipynb
@@ -28,15 +28,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The source of the data:\n",
-    "\n",
-    "copy from homework3...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data Extraction & Cleaning"
    ]
   },
@@ -51,7 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "## The Multinomial Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
    ]
   },
   {
