minor changes in author contributions

--- a/main.ipynb
+++ b/main.ipynb
@@ -773,23 +773,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "This repository and project is the collaboration from **Ningning Long**, **Yue You** and **Tian Xia**. Their contributions to the project are summarized as:\n",
     "\n",
     "**Ningning Long**:\n",
-    "-\t‘*.ipynb’, latent dirichelet allocation modeling and analysis\n",
+    "-\t‘LDA.ipynb’, latent dirichelet allocation modeling and analysis\n",
     "-\t‘makefile’\n",
     "-\t‘environment.yml’\n",
     "-\tSome write-up of ‘main.ipynb’\n",
     "\n",
     "**Yue You**:\n",
-    "-\t‘Modeling.ipynb’, statistical modeling of multinomial logistic regression\n",
+    "-\t‘Logistic.ipynb’, statistical modeling of multinomial logistic regression\n",
     "-\t‘.gitignore’\n",
     "-\tSome write-up of ‘main.ipynb’\n",
     "\n",
